# Assignment

./: Dockerfile  README.md  candidate_report  docker-compose.yml  logging.conf  pyproject.toml
app/: main.py
app/api/v1/depandancies/: authorization.py
app/api/v1/repositories/: candidate.py  report.py  user.py
app/api/v1/routers/: __init__.py
app/api/v1/serializers/: base.py  candidate.py  response.py  user.py
app/api/v1/tests/: __init__.py  test_users_api.py
app/api/v1/views/: __init__.py  candidate.py  health_check.py  report.py  user.py
core/: logging.py
core/constans/: profile.py  response_messages.py  user.py
core/database/: config.py  connection.py
core/exceptions/: profile.py  user.py
core/middlewares/: __init__.py  audit_qawn_request.py  catch_exceptions.py  qawn_id.py
core/mongo/: config.py  database.py
utils/: http_response.py
