[tool.poetry]
name = "assignment"
version = "0.1.0"
description = ""
authors = ["hamzah.alradaideh <hamzah.alradaideh@ahli.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.108.0"
uvicorn = "^0.15.0"
motor = "^3.3.2"
jsonformatter = "^0.3.2"
python-json-logger = "^2.0.7"
pandas = "^2.1.4"
python-multipart = "^0.0.6"
pytest = "^7.4.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
